--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "electron-starter",
-  "productName": "APP NAME",
+  "name": "sys-top",
+  "productName": "SysTop",
   "version": "1.0.0",
-  "description": "Simple starter package for Electron apps",
+  "description": "Monitor your system CPU",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
@@ -14,7 +14,7 @@
   "keywords": [
     "Electron"
   ],
-  "author": "Brad Traversy",
+  "author": "Marco Accardi",
   "license": "MIT",
   "devDependencies": {
     "electron": "^8.2.5",
